[package]
name = "osd"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
tokio = { version = "1", features = ["full"] }
toml = "0.8.8"

